--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,11 @@
     color: rgb(77, 82, 84);
     font-family: "Lato", sans-serif;
     margin: 10px;;
-    padding: 15px;
+    padding: 10px;
 }
 
-/*Formats all unordered lists, since there are little
-to no selectors for lists specific formatting will be done afterwards*/
+/*Formats all unordered lists as a constant, since there are little
+to no selectors for lists specific formatting will be done afterwards */
 ul {
     list-style-type: upper-aplha;
     line-height: 0%;
@@ -30,9 +30,9 @@ input, textarea {
 h1, h2, h3 {
     font-size:  35px;
     font-weight: 1000;
-    color: rgb(13, 136, 128);
+    color: rgb(19, 76, 72);
 }
 
 div, p, title, h1, h2, #messages, input, textarea {
-    background-color: rgb(214, 172, 157);
+    background-color: rgb(232, 140, 107);
 }
